
- Coq now searches directories specified in COQPATH and user-contribs before
  the standard library.

Tactics

- New tactics constr_eq, is_evar and has_evar.
- Remove the two-argument variant of "decide equality".
- New experimental tactical "timeout <n> <tac>". Since <n> is a time
  in second for the moment, this feature should rather be avoided
  in scripts meant to be machine-independent.

Vernacular commands

- In SearchAbout, the [ ] delimiters are now optional.
- When the output file of "Print Universes" ends in ".dot" or ".gv",
  the universe graph is printed in the DOT language, and can be
  processed by Graphviz tools.
- New command "Print Sorted Universes".
- The undocumented and obsolete option "Set/Unset Boxed Definitions" has
  been removed, as well as syntaxes like "Boxed Fixpoint foo".
- A new option "Set Default Timeout n / Unset Default Timeout".

Module System

- The inlining done during application of functors can now be controlled
  more precisely, by the annotations (no inline) or (inline at level XX).
  With the latter annotation, only functor parameters whose levels
  are lower or equal than XX will be inlined.
  The level of a parameter can be fixed by "Parameter Inline(30) foo".
  When levels aren't given, the default value is 100. One can also use
  the flag "Set Inline Level ..." to set a level. TODO: DOC!

Libraries

- Creation of PArith, a subdirectory containing files about the positive type,
  such as BinPos or Pnat.
- Extension of the abstract part of Numbers, which now provide axiomatizations
  and results about many more functions, such as pow, gcd, lcm, sqrt, log2.
  Implementations of these functions in nat N BigN Z BigZ. See in particular
  Npeano for new functions about nat.
- Important revision of NArith and ZArith. In particular some definitions
  or lemmas may have moved. The alternative division (Trunc convention
  instead of Floor) is now named Zquot (noted ÷) and Zrem by analogy